# Kokoro-Bot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-run.sh  pyproject.toml
config/: global.json.example
src/: app.py
src/algo/: search.py
src/cogs/: BotEventsCog.py  GuessSongGame.py  MembleIOHandler.py  MoraKokoro.py  MyGOResponse.py  RoleAdder.py  __init__.py  keyword_response.py  mora.py  notify.py
src/config/: __init__.py  cfg.py
src/models/: bot.py
src/static/: emoji_to_role.json  mygo.json  responce_key.json
