[tool.poetry]
name = "paperscissorstone"
version = "0.2.0"
description = ""
authors = ["Miyago"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-discord = "^1.7.3"
python-dotenv = "^1.0.0"
discord-py = "^2.3.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
